TFP-5554: Nye historikkinnslag (#6892)
---------

Co-authored-by: Anders Palfi <anders.palfi@nav.no>
Co-authored-by: thao1 <thao.than.nguyen@nav.no>
Co-authored-by: Petter Ekern <petter.ekern@nav.no>
Co-authored-by: Siri Mykland <siri.mykland@nav.no>