@@ -5,16 +5,12 @@ import static org.mockito.Mockito.mock;
 
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.mockito.Mockito;
 
 import no.nav.foreldrepenger.behandling.BehandlingReferanse;
 import no.nav.foreldrepenger.behandling.aksjonspunkt.AksjonspunktOppdaterParameter;
 import no.nav.foreldrepenger.behandlingslager.behandling.BehandlingStegType;
 import no.nav.foreldrepenger.behandlingslager.behandling.aksjonspunkt.AksjonspunktDefinisjon;
-import no.nav.foreldrepenger.behandlingslager.behandling.historikk.HistorikkEndretFeltType;
-import no.nav.foreldrepenger.behandlingslager.behandling.historikk.HistorikkEndretFeltVerdiType;
-import no.nav.foreldrepenger.behandlingslager.behandling.historikk.Historikkinnslag;
-import no.nav.foreldrepenger.behandlingslager.behandling.historikk.HistorikkinnslagType;
+import no.nav.foreldrepenger.behandlingslager.behandling.historikk.HistorikkinnslagRepository;
 import no.nav.foreldrepenger.behandlingslager.behandling.repository.BehandlingRepositoryProvider;
 import no.nav.foreldrepenger.behandlingslager.behandling.ytelsefordeling.OppgittRettighetEntitet;
 import no.nav.foreldrepenger.behandlingslager.behandling.ytelsefordeling.YtelsesFordelingRepository;
@@ -23,24 +19,22 @@ import no.nav.foreldrepenger.behandlingslager.testutilities.behandling.ScenarioM
 import no.nav.foreldrepenger.dbstoette.EntityManagerAwareTest;
 import no.nav.foreldrepenger.domene.typer.AktørId;
 import no.nav.foreldrepenger.domene.ytelsefordeling.YtelseFordelingTjeneste;
-import no.nav.foreldrepenger.historikk.HistorikkInnslagTekstBuilder;
-import no.nav.foreldrepenger.historikk.HistorikkTjenesteAdapter;
 import no.nav.foreldrepenger.web.app.tjenester.behandling.uttak.app.FaktaOmsorgRettTjeneste;
 import no.nav.foreldrepenger.web.app.tjenester.behandling.uttak.dto.AvklarAleneomsorgVurderingDto;
 
 class BekreftAleneomsorgOppdatererTest extends EntityManagerAwareTest {
     private static final AksjonspunktDefinisjon AKSJONSPUNKT_DEF = AksjonspunktDefinisjon.MANUELL_KONTROLL_AV_OM_BRUKER_HAR_ALENEOMSORG;
 
-    private final HistorikkInnslagTekstBuilder tekstBuilder = new HistorikkInnslagTekstBuilder();
-
-    private BehandlingRepositoryProvider behandlingRepositoryProvider;
+    private BehandlingRepositoryProvider repositoryProvider;
     private YtelseFordelingTjeneste ytelseFordelingTjeneste;
+    private HistorikkinnslagRepository historikkRepository;
 
     @BeforeEach
     void setUp() {
         var entityManager = getEntityManager();
-        behandlingRepositoryProvider = new BehandlingRepositoryProvider(entityManager);
+        repositoryProvider = new BehandlingRepositoryProvider(entityManager);
         ytelseFordelingTjeneste = new YtelseFordelingTjeneste(new YtelsesFordelingRepository(entityManager));
+        historikkRepository = repositoryProvider.getHistorikkinnslagRepository();
     }
 
     @Test
@@ -56,31 +50,25 @@ class BekreftAleneomsorgOppdatererTest extends EntityManagerAwareTest {
         scenario.medOppgittRettighet(rettighet);
         scenario.leggTilAksjonspunkt(AKSJONSPUNKT_DEF, BehandlingStegType.VURDER_UTTAK);
 
-        scenario.lagre(behandlingRepositoryProvider);
+        scenario.lagre(repositoryProvider);
 
         var behandling = scenario.getBehandling();
         // Dto
-        var dto = new AvklarAleneomsorgVurderingDto("begrunnelse");
+        var dto = new AvklarAleneomsorgVurderingDto("begrunnelse.");
         dto.setAleneomsorg(oppdatertAleneOmsorg);
         dto.setAnnenforelderHarRett(true);
         var aksjonspunkt = behandling.getAksjonspunktFor(dto.getAksjonspunktDefinisjon());
         // Act
-        var oppdateringresultat = new BekreftAleneomsorgOppdaterer(new FaktaOmsorgRettTjeneste(ytelseFordelingTjeneste, lagMockHistory(), mock(FagsakEgenskapRepository.class)))
-            .oppdater(dto, new AksjonspunktOppdaterParameter(BehandlingReferanse.fra(behandling), dto, aksjonspunkt));
-        var historikkinnslag = new Historikkinnslag();
-        historikkinnslag.setType(HistorikkinnslagType.FAKTA_ENDRET);
-        var historikkinnslagDeler = tekstBuilder.build(historikkinnslag);
+        var oppdateringresultat = new BekreftAleneomsorgOppdaterer(
+            new FaktaOmsorgRettTjeneste(ytelseFordelingTjeneste, mock(FagsakEgenskapRepository.class)), historikkRepository).oppdater(dto,
+            new AksjonspunktOppdaterParameter(BehandlingReferanse.fra(behandling), dto, aksjonspunkt));
 
         // Assert
         assertThat(oppdateringresultat.kreverTotrinnsKontroll()).isFalse();
-        assertThat(historikkinnslagDeler).hasSize(1);
-        var del = historikkinnslagDeler.get(0);
-        var aleneomsorgOpt = del.getEndretFelt(HistorikkEndretFeltType.ALENEOMSORG);
-        assertThat(aleneomsorgOpt).hasValueSatisfying(aleneomsorg -> {
-            assertThat(aleneomsorg.getNavn()).isEqualTo(HistorikkEndretFeltType.ALENEOMSORG.getKode());
-            assertThat(aleneomsorg.getFraVerdi()).isNull();
-            assertThat(aleneomsorg.getTilVerdi()).isEqualTo(HistorikkEndretFeltVerdiType.ALENEOMSORG.getKode());
-        });
+        var historikkinnslag = historikkRepository.hent(behandling.getSaksnummer()).getFirst();
+        assertThat(historikkinnslag.getLinjer()).hasSize(2);
+        assertThat(historikkinnslag.getLinjer().get(0).getTekst()).contains("Søker har aleneomsorg for barnet");
+        assertThat(historikkinnslag.getLinjer().get(1).getTekst()).isEqualTo(dto.getBegrunnelse());
     }
 
     @Test
@@ -96,31 +84,27 @@ class BekreftAleneomsorgOppdatererTest extends EntityManagerAwareTest {
         scenario.medOppgittRettighet(rettighet);
         scenario.leggTilAksjonspunkt(AKSJONSPUNKT_DEF, BehandlingStegType.VURDER_UTTAK);
 
-        scenario.lagre(behandlingRepositoryProvider);
+        scenario.lagre(repositoryProvider);
 
         var behandling = scenario.getBehandling();
         // Dto
-        var dto = new AvklarAleneomsorgVurderingDto("begrunnelse");
+        var dto = new AvklarAleneomsorgVurderingDto("begrunnelse.");
         dto.setAleneomsorg(oppdatertAleneOmsorg);
         dto.setAnnenforelderHarRett(true);
         var aksjonspunkt = behandling.getAksjonspunktFor(dto.getAksjonspunktDefinisjon());
         // Act
-        var oppdateringresultat = new BekreftAleneomsorgOppdaterer(new FaktaOmsorgRettTjeneste(ytelseFordelingTjeneste, lagMockHistory(), mock(FagsakEgenskapRepository.class)))
-            .oppdater(dto, new AksjonspunktOppdaterParameter(BehandlingReferanse.fra(behandling), dto, aksjonspunkt));
-        var historikkinnslag = new Historikkinnslag();
-        historikkinnslag.setType(HistorikkinnslagType.FAKTA_ENDRET);
-        var historikkinnslagDeler = tekstBuilder.build(historikkinnslag);
+        var oppdateringresultat = new BekreftAleneomsorgOppdaterer(
+            new FaktaOmsorgRettTjeneste(ytelseFordelingTjeneste, mock(FagsakEgenskapRepository.class)),
+            repositoryProvider.getHistorikkinnslagRepository()).oppdater(dto,
+            new AksjonspunktOppdaterParameter(BehandlingReferanse.fra(behandling), dto, aksjonspunkt));
 
         // Assert
         assertThat(oppdateringresultat.kreverTotrinnsKontroll()).isTrue();
-        assertThat(historikkinnslagDeler).hasSize(1);
-        var del = historikkinnslagDeler.get(0);
-        var aleneomsorgOpt = del.getEndretFelt(HistorikkEndretFeltType.ALENEOMSORG);
-        assertThat(aleneomsorgOpt).hasValueSatisfying(aleneomsorg -> {
-            assertThat(aleneomsorg.getNavn()).isEqualTo(HistorikkEndretFeltType.ALENEOMSORG.getKode());
-            assertThat(aleneomsorg.getFraVerdi()).isNull();
-            assertThat(aleneomsorg.getTilVerdi()).isEqualTo(HistorikkEndretFeltVerdiType.IKKE_ALENEOMSORG.getKode());
-        });
+        var historikk = repositoryProvider.getHistorikkinnslagRepository().hent(behandling.getSaksnummer()).getFirst();
+        assertThat(historikk.getLinjer()).hasSize(3);
+        assertThat(historikk.getLinjer().getFirst().getTekst()).contains("Søker har ikke aleneomsorg for barnet");
+        assertThat(historikk.getLinjer().get(1).getTekst()).contains("Annen forelder har rett");
+        assertThat(historikk.getLinjer().get(2).getTekst()).isEqualTo(dto.getBegrunnelse());
     }
 
     @Test
@@ -136,39 +120,28 @@ class BekreftAleneomsorgOppdatererTest extends EntityManagerAwareTest {
         scenario.medOppgittRettighet(rettighet);
         scenario.leggTilAksjonspunkt(AKSJONSPUNKT_DEF, BehandlingStegType.VURDER_UTTAK);
 
-        scenario.lagre(behandlingRepositoryProvider);
+        scenario.lagre(repositoryProvider);
 
         var behandling = scenario.getBehandling();
         // Dto
-        var dto = new AvklarAleneomsorgVurderingDto("begrunnelse");
+        var dto = new AvklarAleneomsorgVurderingDto("begrunnelse.");
         dto.setAleneomsorg(oppdatertAleneOmsorg);
         dto.setAnnenforelderHarRett(true);
         var aksjonspunkt = behandling.getAksjonspunktFor(dto.getAksjonspunktDefinisjon());
         // Act
-        var oppdateringresultat = new BekreftAleneomsorgOppdaterer(new FaktaOmsorgRettTjeneste(ytelseFordelingTjeneste, lagMockHistory(), mock(FagsakEgenskapRepository.class)))
-            .oppdater(dto, new AksjonspunktOppdaterParameter(BehandlingReferanse.fra(behandling), dto, aksjonspunkt));
-        var historikkinnslag = new Historikkinnslag();
-        historikkinnslag.setType(HistorikkinnslagType.FAKTA_ENDRET);
-        var historikkinnslagDeler = tekstBuilder.build(historikkinnslag);
+        var oppdateringresultat = new BekreftAleneomsorgOppdaterer(
+            new FaktaOmsorgRettTjeneste(ytelseFordelingTjeneste, mock(FagsakEgenskapRepository.class)),
+            repositoryProvider.getHistorikkinnslagRepository()).oppdater(dto,
+            new AksjonspunktOppdaterParameter(BehandlingReferanse.fra(behandling), dto, aksjonspunkt));
 
         // Assert
         assertThat(oppdateringresultat.kreverTotrinnsKontroll()).isTrue();
-        assertThat(historikkinnslagDeler).hasSize(1);
-        assertThat(historikkinnslagDeler.get(0).getEndredeFelt()).hasSize(2);
-        var del = historikkinnslagDeler.get(0);
-        var aleneomsorgOpt = del.getEndretFelt(HistorikkEndretFeltType.ALENEOMSORG);
-        assertThat(aleneomsorgOpt).hasValueSatisfying(aleneomsorg -> {
-            assertThat(aleneomsorg.getNavn()).isEqualTo(HistorikkEndretFeltType.ALENEOMSORG.getKode());
-            assertThat(aleneomsorg.getFraVerdi()).isNull();
-            assertThat(aleneomsorg.getTilVerdi()).isEqualTo(HistorikkEndretFeltVerdiType.IKKE_ALENEOMSORG.getKode());
-        });
 
-        var annenforelderRettOpt = del.getEndretFelt(HistorikkEndretFeltType.RETT_TIL_FORELDREPENGER);
-        assertThat(annenforelderRettOpt).hasValueSatisfying(annenforelderRett -> {
-            assertThat(annenforelderRett.getNavn()).isEqualTo(HistorikkEndretFeltType.RETT_TIL_FORELDREPENGER.getKode());
-            assertThat(annenforelderRett.getFraVerdi()).isNull();
-            assertThat(annenforelderRett.getTilVerdi()).isEqualTo(HistorikkEndretFeltVerdiType.ANNEN_FORELDER_HAR_RETT.getKode());
-        });
+        var historikk = historikkRepository.hent(behandling.getSaksnummer()).getFirst();
+        assertThat(historikk.getLinjer()).hasSize(3);
+        assertThat(historikk.getLinjer().get(0).getTekst()).contains("Søker har ikke aleneomsorg for barnet");
+        assertThat(historikk.getLinjer().get(1).getTekst()).contains("Annen forelder har rett");
+        assertThat(historikk.getLinjer().get(2).getTekst()).isEqualTo(dto.getBegrunnelse());
     }
 
     @Test
@@ -186,56 +159,32 @@ class BekreftAleneomsorgOppdatererTest extends EntityManagerAwareTest {
         scenario.medSøknadAnnenPart().medAktørId(annenpart);
         scenario.leggTilAksjonspunkt(AKSJONSPUNKT_DEF, BehandlingStegType.VURDER_UTTAK);
 
-        scenario.lagre(behandlingRepositoryProvider);
+        scenario.lagre(repositoryProvider);
 
         var behandling = scenario.getBehandling();
         // Dto
-        var dto = new AvklarAleneomsorgVurderingDto("begrunnelse");
+        var dto = new AvklarAleneomsorgVurderingDto("begrunnelse.");
         dto.setAleneomsorg(oppdatertAleneOmsorg);
         dto.setAnnenforelderHarRett(false);
         dto.setAnnenforelderMottarUføretrygd(true);
         var aksjonspunkt = behandling.getAksjonspunktFor(dto.getAksjonspunktDefinisjon());
         // Act
         var oppdateringresultat = new BekreftAleneomsorgOppdaterer(
-            new FaktaOmsorgRettTjeneste(ytelseFordelingTjeneste, lagMockHistory(), mock(FagsakEgenskapRepository.class)))
-            .oppdater(dto, new AksjonspunktOppdaterParameter(BehandlingReferanse.fra(behandling), dto, aksjonspunkt));
-        var historikkinnslag = new Historikkinnslag();
-        historikkinnslag.setType(HistorikkinnslagType.FAKTA_ENDRET);
-        var historikkinnslagDeler = tekstBuilder.build(historikkinnslag);
+            new FaktaOmsorgRettTjeneste(ytelseFordelingTjeneste, mock(FagsakEgenskapRepository.class)),
+            repositoryProvider.getHistorikkinnslagRepository()).oppdater(dto,
+            new AksjonspunktOppdaterParameter(BehandlingReferanse.fra(behandling), dto, aksjonspunkt));
+
+        var historikkinnslag = historikkRepository.hent(behandling.getSaksnummer());
 
         // Assert
         assertThat(oppdateringresultat.kreverTotrinnsKontroll()).isTrue();
 
         assertThat(ytelseFordelingTjeneste.hentAggregat(behandling.getId()).getMorUføretrygdAvklaring()).isTrue();
 
-        assertThat(historikkinnslagDeler).hasSize(1);
-        assertThat(historikkinnslagDeler.get(0).getEndredeFelt()).hasSize(3);
-        var del = historikkinnslagDeler.get(0);
-        var aleneomsorgOpt = del.getEndretFelt(HistorikkEndretFeltType.ALENEOMSORG);
-        assertThat(aleneomsorgOpt).hasValueSatisfying(aleneomsorg -> {
-            assertThat(aleneomsorg.getNavn()).isEqualTo(HistorikkEndretFeltType.ALENEOMSORG.getKode());
-            assertThat(aleneomsorg.getFraVerdi()).isNull();
-            assertThat(aleneomsorg.getTilVerdi()).isEqualTo(HistorikkEndretFeltVerdiType.IKKE_ALENEOMSORG.getKode());
-        });
-
-        var annenforelderRettOpt = del.getEndretFelt(HistorikkEndretFeltType.RETT_TIL_FORELDREPENGER);
-        assertThat(annenforelderRettOpt).hasValueSatisfying(annenforelderRett -> {
-            assertThat(annenforelderRett.getNavn()).isEqualTo(HistorikkEndretFeltType.RETT_TIL_FORELDREPENGER.getKode());
-            assertThat(annenforelderRett.getFraVerdi()).isNull();
-            assertThat(annenforelderRett.getTilVerdi()).isEqualTo(HistorikkEndretFeltVerdiType.ANNEN_FORELDER_HAR_IKKE_RETT.getKode());
-        });
-
-        var uføretrygdOpt = del.getEndretFelt(HistorikkEndretFeltType.MOR_MOTTAR_UFØRETRYGD);
-        assertThat(uføretrygdOpt).hasValueSatisfying(uføretrygd -> {
-            assertThat(uføretrygd.getNavn()).isEqualTo(HistorikkEndretFeltType.MOR_MOTTAR_UFØRETRYGD.getKode());
-            assertThat(uføretrygd.getFraVerdi()).isNull();
-            assertThat(uføretrygd.getTilVerdi()).isEqualTo(Boolean.TRUE.toString());
-        });
-    }
-
-    private HistorikkTjenesteAdapter lagMockHistory() {
-        var mockHistory = mock(HistorikkTjenesteAdapter.class);
-        Mockito.when(mockHistory.tekstBuilder()).thenReturn(tekstBuilder);
-        return mockHistory;
+        assertThat(historikkinnslag.getFirst().getLinjer()).hasSize(4);
+        assertThat(historikkinnslag.getFirst().getLinjer().get(0).getTekst()).contains("Søker har ikke aleneomsorg for barnet");
+        assertThat(historikkinnslag.getFirst().getLinjer().get(1).getTekst()).contains("Annen forelder har ikke rett");
+        assertThat(historikkinnslag.getFirst().getLinjer().get(2).getTekst()).contains("Mor mottar uføretrygd");
+        assertThat(historikkinnslag.getFirst().getLinjer().get(3).getTekst()).isEqualTo(dto.getBegrunnelse());
     }
 }
